src/bin/loadzone/tests/error/formerr2.db
$TTL 300
com.			IN SOA	ns.com. hostmaster.com. (
				1        ; serial
				3600
				1800
				1814400
				3600
				)
			NS	ns.example.com.
ns.com.			A	127.0.0.1
$INCLUDE include.txt sub
a.com.			A	10.0.0.1
